# jsk_aerial_robot

./: .travis.sh  AP__Math_8h_source.html  Doxyfile  README.md  STM32F7_2config_8h_source.html  STM32H7_2config_8h_source.html  STM32H7__v2_2config_8h_source.html  aerial__robot__base_8h_source.html  aerial__robot__estimation_2include_2aerial__robot__estimation_2sensor_2imu_8h_source.html  aerial__robot__hw__sim_8h_source.html  aerial__robot__model_2test_2aerial__robot__model_2numerical__jacobians_8h_source.html  aerial__robot__model_8h_source.html  aerial__robot__model__ros_8h_source.html  aerial_robot_debian.rosinstall  aerial_robot_kinetic.rosinstall  aerial_robot_melodic.rosinstall  aerial_robot_noetic.rosinstall  altitude__estimate_8h_source.html  annotated.html  attitude__control_8h_source.html  attitude__estimate_8h_source.html  baro_8h_source.html  baro__bias__plugin_8h_source.html  baro__ms5611_8h_source.html  base_8h_source.html  base__plugin_8h_source.html  battery__status_8h_source.html  can__imu__mpu9250_8h_source.html  can__initializer_8h_source.html  can__motor_8h_source.html  can__servo_8h_source.html  canfd__test_8h_source.html  care_8h_source.html  classAerialRobotBase-members.html  classAerialRobotBase.html  classAltitudeEstimate-members.html  classAltitudeEstimate.html  classAttitudeController-members.html  classAttitudeController.html  classAttitudeEstimate-members.html  (+1322 more)
.github/workflows/: catkin_lint.yml  doxygen-gh-pages.yml  neuron_build.yaml  ros_test.yml  ros_test_arm64.yml
aerial_robot/: package.xml
aerial_robot_base/scripts/: rosbag_plot.py  rosbag_plot.yaml  rosbag_rosout.py
aerial_robot_control/: CMakeLists.txt
aerial_robot_control/include/aerial_robot_control/: flight_navigation.h
aerial_robot_control/src/: flight_navigation.cpp
aerial_robot_control/src/control/: under_actuated_lqi_controller.cpp  under_actuated_tilted_lqi_controller.cpp
aerial_robot_dynamics/: CMakeLists.txt
aerial_robot_dynamics/include/aerial_robot_dynamics/: robot_model.h  robot_model_test.h
aerial_robot_dynamics/launch/: set_robot_description.launch
aerial_robot_dynamics/src/: robot_model.cpp
aerial_robot_dynamics/src/benchmark/: tauext_partial_q_derivative_hessian_benchmark.cpp  tauext_partial_q_derivative_numerical_benchmark.cpp  tauext_partial_q_derivative_rnea_benchmark.cpp
aerial_robot_dynamics/src/test/: tauext_by_thrust_q_derivative_comparison_test.cpp  test_node.cpp
aerial_robot_dynamics/urdf/: robot.urdf
aerial_robot_estimation/src/sensor/: imu.cpp
aerial_robot_model/: CMakeLists.txt  package.xml
aerial_robot_model/include/aerial_robot_model/: servo_bridge.h
aerial_robot_model/src/servo_bridge/: servo_bridge.cpp
aerial_robot_nerve/motor_test/launch/: test.launch
aerial_robot_simulation/: CMakeLists.txt  mujoco_robot_hw_sim_plugin.xml  package.xml  rotor_controllers_plugin.xml
aerial_robot_simulation/launch/: gazebo.launch  mujoco.launch  mujoco_simulation.launch
aerial_robot_simulation/scripts/: init_pose.py  mujoco_ros_interface.py  rotor_controller_spawner.py
aerial_robot_simulation/src/: rotor_controller.cpp
robots/delta/: CMakeLists.txt  package.xml
robots/delta/config/: FlightControl.yaml  MPC.yaml  rviz_config
robots/delta/config/20240722/: RollingControl_sim.yaml
robots/delta/include/delta/control/: delta_controller.h
robots/delta/include/delta/design/: delta_optimal_design.h
robots/delta/include/delta/model/: delta_model.h  delta_robot_model.h
robots/delta/include/delta/navigation/: delta_navigation.h
robots/delta/launch/: bringup.launch  cylinder_spawn.launch  delta_optimal_design.launch  delta_spawn.launch
robots/delta/launch/includes/: sensors.launch.xml
robots/delta/msg/: GimbalPlanning.msg
robots/delta/plugins/: control_plugins.xml
robots/delta/scripts/delta/: delta_interface.py
robots/delta/src/control/: delta_controller.cpp  delta_controller_common.cpp  delta_controller_utils.cpp  delta_flight_controller.cpp  delta_gimbal_controller.cpp  delta_ground_controller.cpp
robots/delta/src/design/: delta_joint_load_calc.cpp  delta_optimal_design.cpp
robots/delta/src/model/: delta_model.cpp  delta_robot_model.cpp
robots/delta/src/navigation/: delta_navigation.cpp  delta_transform_planner.cpp
robots/delta/urdf/: common.xacro  robot.gazebo.xacro
robots/delta/urdf/20240319_mesh/: rolling_link.urdf.xacro
robots/delta/urdf/infratable/: cylinder.urdf
robots/dragon/: CMakeLists.txt  package.xml
robots/dragon/launch/: bringup.launch  (+2 more)
robots/gundam/: CMakeLists.txt  package.xml
robots/gundam/launch/: bringup.launch
robots/gundam/robots/: gundam.gazebo.xacro  gundam.urdf.xacro
robots/gundam/urdf/: gundam_common.xacro
robots/hydrus/: CMakeLists.txt
robots/hydrus_xi/: CMakeLists.txt
robots/mini_quadrotor/: CMakeLists.txt  package.xml
robots/mini_quadrotor/config/: FlightControl.yaml  NavigationConfig.yaml  StateEstimation.yaml  mpc_config.yaml
robots/mini_quadrotor/config/mpc/: task.info
robots/mini_quadrotor/config/sensors/: realsense_t265.yaml
robots/mini_quadrotor/include/mini_quadrotor/control/: ocp.h
robots/mini_quadrotor/launch/: bringup.launch  crocoddyl_test.launch
robots/mini_quadrotor/launch/includes/: vo.launch.xml
robots/mini_quadrotor/plugins/: flight_control_plugins.xml
robots/mini_quadrotor/src/: crocoddyl_test.cpp
robots/mini_quadrotor/src/control/: ocp.cpp
robots/mini_quadrotor/test/: CMakeLists.txt  flight_control.test
robots/mini_quadrotor/urdf/: robot.gazebo.xacro  robot.urdf  robot_with_t265.urdf.xacro
robots/rolling/: CMakeLists.txt  package.xml
search/: all_0.js  all_10.js  all_11.js  all_12.js  all_13.js  all_14.js  all_15.js  all_17.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_11.js  classes_12.js  classes_13.js  classes_15.js  classes_16.js  classes_2.js  classes_3.js  classes_4.js  classes_5.js  classes_6.js  classes_7.js  classes_8.js  classes_9.js  classes_a.js  classes_b.js  classes_c.js  classes_d.js  classes_e.js  (+26 more)
(+147 files in other folders)
