<?xml version="1.0"?>
<package>
  <name>delta</name>
  <version>1.3.3</version>
  <description>The delta robot package</description>

  <maintainer email="chou@jsk.imi.i.u-tokyo.ac.jp">Bakui Chou</maintainer>
  <license>BSD</license>
  <url type="website">https://github.com/jsk-ros-pkg/jsk_aerial_robot</url>
  <author email="sugihara@jsk.imi.i.u-tokyo.ac.jp">Kazuki Sugihara</author>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>aerial_robot_control</build_depend>
  <build_depend>aerial_robot_estimation</build_depend>
  <build_depend>aerial_robot_model</build_depend>
  <build_depend>aerial_robot_msgs</build_depend>
  <build_depend>casadi</build_depend>
  <build_depend>casadi_eigen</build_depend>
  <build_depend>pinocchio</build_depend>
  <build_depend>pluginlib</build_depend>
  <build_depend>roscpp</build_depend>

  <run_depend>aerial_robot_base</run_depend>
  <run_depend>aerial_robot_control</run_depend>
  <run_depend>aerial_robot_estimation</run_depend>
  <run_depend>aerial_robot_model</run_depend>
  <run_depend>aerial_robot_msgs</run_depend>
  <run_depend>aerial_robot_simulation</run_depend>
  <run_depend>casadi</run_depend>
  <run_depend>casadi_eigen</run_depend>
  <run_depend>mini_quadrotor</run_depend>
  <run_depend>pinocchio</run_depend>
  <run_depend>pluginlib</run_depend>
  <run_depend>roscpp</run_depend>

  <export>
    <aerial_robot_control plugin="${prefix}/plugins/control_plugins.xml" />
  </export>

</package>
