<?xml version="1.0"?>
<package format="2">
  <name>gundam</name>
  <version>1.3.2</version>
  <description>The gundam package</description>

  <maintainer email="sugihara@jsk.imi.i.u-tokyo.ac.jp">Kazuki Sugihara</maintainer>
  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>aerial_robot_base</build_depend>
  <build_depend>aerial_robot_control</build_depend>
  <build_depend>aerial_robot_model</build_depend>
  <build_depend>aerial_robot_msgs</build_depend>
  <build_depend>aerial_robot_simulation</build_depend>
  <build_depend>dragon</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>spinal</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>pluginlib</build_depend>

  <build_export_depend>aerial_robot_base</build_export_depend>
  <build_export_depend>aerial_robot_control</build_export_depend>
  <build_export_depend>aerial_robot_model</build_export_depend>
  <build_export_depend>aerial_robot_msgs</build_export_depend>
  <build_export_depend>aerial_robot_simulation</build_export_depend>
  <build_export_depend>dragon</build_export_depend>
  <build_export_depend>roscpp</build_export_depend>
  <build_export_depend>sensor_msgs</build_export_depend>
  <build_export_depend>spinal</build_export_depend>
  <build_export_depend>std_msgs</build_export_depend>
  <build_export_depend>pluginlib</build_export_depend>

  <exec_depend>aerial_robot_base</exec_depend>
  <exec_depend>aerial_robot_control</exec_depend>
  <exec_depend>aerial_robot_model</exec_depend>
  <exec_depend>aerial_robot_msgs</exec_depend>
  <exec_depend>aerial_robot_simulation</exec_depend>
  <exec_depend>dragon</exec_depend>
  <exec_depend>roscpp</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>spinal</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>pluginlib</exec_depend>

</package>
