<?xml version="1.0"?>
<package>
  <name>mini_quadrotor</name>
  <version>1.3.3</version>
  <description>The basic packages for mini quadrotor</description>

  <maintainer email="chou@jsk.imi.i.u-tokyo.ac.jp">Bakui Chou</maintainer>
  <license>BSD</license>
  <url type="website">https://github.com/JSKAerialRobot/aerial_robot</url>
  <author email="chou@jsk.imi.i.u-tokyo.ac.jp">Bakui Chou</author>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>aerial_robot_control</build_depend>
  <build_depend>aerial_robot_estimation</build_depend>
  <build_depend>aerial_robot_model</build_depend>
  <build_depend>mujoco_ros_control</build_depend>
  <build_depend>ocs2_core</build_depend>
  <build_depend>ocs2_ddp</build_depend>
  <build_depend>ocs2_mpc</build_depend>
  <build_depend>ocs2_oc</build_depend>
  <build_depend>ocs2_pinocchio_interface</build_depend>
  <build_depend>ocs2_robotic_tools</build_depend>
  <build_depend>pluginlib</build_depend>

  <run_depend>aerial_robot_base</run_depend>
  <run_depend>aerial_robot_control</run_depend>
  <run_depend>aerial_robot_estimation</run_depend>
  <run_depend>aerial_robot_model</run_depend>
  <run_depend>aerial_robot_msgs</run_depend>
  <run_depend>aerial_robot_simulation</run_depend>
  <run_depend>ocs2_core</run_depend>
  <run_depend>ocs2_ddp</run_depend>
  <run_depend>ocs2_mpc</run_depend>
  <run_depend>ocs2_oc</run_depend>
  <run_depend>ocs2_pinocchio_interface</run_depend>
  <run_depend>ocs2_robotic_tools</run_depend>
  <run_depend>pluginlib</run_depend>

  <test_depend>rostest</test_depend>

  <export>
    <aerial_robot_control plugin="${prefix}/plugins/flight_control_plugins.xml" />
  </export>

</package>
